refactor: SonarQube warnings eliminated